--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -32,9 +32,6 @@
                 <li>
                     <a href="{% url 'faculty_list' %}"><i class="fas fa-chart-bar"></i>Categories</a>
                 </li>
-<!--                <li>-->
-<!--                    <a href="#"><i class="fas fa-chart-bar"></i>Kafedra</a>-->
-<!--                </li>-->
 
                 <li>
                     <a href="{% url 'guruh_list' %}"><i class="fas fa-chart-bar"></i>Products</a>
@@ -46,6 +43,10 @@
 
                 <li>
                     <a href="{% url 'subject_list' %}"><i class="fas fa-chart-bar"></i>Orders</a>
+                </li>
+
+                <li>
+                    <a href="{% url 'order_product_list' %}"><i class="fas fa-chart-bar"></i>OrderProducts</a>
                 </li>
 
             </ul>
