--- a/templates/order_product/list.html
+++ b/templates/order_product/list.html
@@ -14,8 +14,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="overview-wrap">
-                            <h2 class="title-1">Student List</h2>
-                            <a class="au-btn au-btn-icon au-btn--blue" href="{% url 'student_create' %}">
+                            <h2 class="title-1">Order product List</h2>
+                            <a class="au-btn au-btn-icon au-btn--blue" href="{% url 'order_product_create' %}">
                                 <i class="zmdi zmdi-plus"></i>add</a>
                         </div>
                     </div>
@@ -29,29 +29,27 @@
                                 <thead>
                                     <tr>
                                         <th>#</th>
-                                        <th>First name</th>
-                                        <th>Last name</th>
-                                        <th>Age</th>
-                                        <th>Group</th>
-                                        <th>img</th>
-                                        <th>Actions</th>
+                                        <th>order</th>
+                                        <th>product</th>
+                                        <th>count</th>
+                                        <th>price</th>
+                                        <th>Amallar</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {% for i in students %}
+                                    {% for item in order_products  %}
                                     <tr>
-                                        <td>{{ i.id }}</td>
-                                        <td>{{ i.first_name }}</td>
-                                        <td>{{ i.last_name }}</td>
-                                        <td>{{ i.age }}</td>
-                                        <td>{{ i.guruh }}</td>
-                                        <td><img src="/media/{{i.img}}" alt="photo" width="40px" height="50px"></td>
+                                        <td>{{ item.id }}</td>
+                                        <td>{{ item.first_name }} {{ item.last_name }}</td>
+                                        <td>{{ item.title }}</td>
+                                        <td>{{ item.count }}</td>
+                                        <td>{{ item.price }}</td>
                                         <td>
                                             <div class="table-data-feature">
-                                                <a class="item" data-toggle="tooltip" href="{% url 'student_edit' pk=i.id %}" data-placement="top" title="" data-original-title="Edit">
+                                                <a class="item" data-toggle="tooltip" href="{% url 'order_product_edit' item.id %}" data-placement="top" title="" data-original-title="Edit">
                                                     <i class="zmdi zmdi-edit text-warning"></i>
                                                 </a>
-                                                <a class="item" data-toggle="tooltip" href="{% url 'student_delete' pk=i.id %}" data-placement="top" title="" data-original-title="Delete">
+                                                <a class="item" data-toggle="tooltip" href="{% url 'order_product_delete' item.id %}" data-placement="top" title="" data-original-title="Delete">
                                                     <i class="zmdi zmdi-delete text-danger"></i>
                                                 </a>
                                             </div>
